--- a/MVC_API_DoAn/Views/NhanVien/AddNhanVien.cshtml
+++ b/MVC_API_DoAn/Views/NhanVien/AddNhanVien.cshtml
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Employee</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/API_DoAn/assets/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                             </div>
                             <div class="d-grid gap-2">
                                 <button type="submit" class="btn btn-success">Add Employee</button>
-                                <a asp-controller="ShopController1" asp-action="TrangChu" class="btn btn-secondary">Back</a>
+                                <a asp-controller="NhanVien" asp-action="TrangChuNV" class="btn btn-secondary">Back</a>
                             </div>
                         </form>
                     </div>
@@ -55,8 +55,7 @@
             </div>
         </div>
     </div>
-
-    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/API_DoAn/assets/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
