--- a/MVC_API_DoAn/Views/ShopController1/TrangChu.cshtml
+++ b/MVC_API_DoAn/Views/ShopController1/TrangChu.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<MVC_API_DoAn.Models.DTO.ShopDTO>
+@using Microsoft.AspNetCore.Authorization
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,16 +9,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <meta name="description" content="">
     <title>Product Management</title>
-
-
-
+    <link rel="stylesheet" href="~/API_DoAn/assets/web/~/API_DoAn/assets/mobirise-icons2/mobirise2.css">
+    <link rel="stylesheet" href="~/API_DoAn/assets/web/~/API_DoAn/assets/mobirise-icons-bold/mobirise-icons-bold.css">
+    <link rel="stylesheet" href="~/API_DoAn/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/API_DoAn/assets/bootstrap/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="~/API_DoAn/assets/bootstrap/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="~/API_DoAn/assets/parallax/jarallax.css">
+    <link rel="stylesheet" href="~/API_DoAn/assets/dropdown/css/style.css">
+    <link rel="stylesheet" href="~/API_DoAn/assets/socicon/css/styles.css">
+    <link rel="stylesheet" href="~/API_DoAn/assets/theme/css/style.css">
+    <link rel="stylesheet" href="~/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="~/API_DoAn/~/API_DoAn/assets/images/coffee-icon-sign-symbol-design-free-png.webp" type="image/x-icon">
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap">
+    </noscript>
+    <link rel="preload" as="style" href="~/API_DoAn/assets/mobirise/css/mbr-additional.css">
+    <link rel="stylesheet" href="~/API_DoAn/assets/mobirise/css/mbr-additional.css" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <!-- Thêm CSRF Token vào thẻ meta -->
 </head>
 
 <body>
+    <section data-bs-version="5.1" class="menu menu3 cid-tsEQosCCDP" once="menu" id="menu3-0">
+        <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
+            <div class="container">
+                <div class="navbar-brand">
+                    <span class="navbar-logo">
+                        <a href="index.html">
+                            <img src="~/API_DoAn/assets/Anh/logo2.jpg" alt="Coffee Shop" style="height: 3rem;">
+                        </a>
+                    </span>
+                </div>
 
-
-
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <div class="hamburger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+                        <li class="nav-item">
+                            <a class="nav-link link text-black display-4" asp-controller="ShopController1" asp-action="TrangChu"> Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link link text-black display-4" asp-controller="NhanVien" asp-action="TrangChuNV">Employees</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link text-black dropdown-toggle show display-4" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+                                <span class="mobi-mbri mobi-mbri-user-2 mbr-iconfont mbr-iconfont-btn"></span>
+                            </a>
+                            <div class="dropdown-menu show" aria-labelledby="dropdown-751" data-bs-popper="none">
+                                <a class="text-black show dropdown-item display-4" asp-controller="PhanQuyen" asp-action="Register">Register</a>
+                                <a class="text-black show dropdown-item display-4" asp-controller="PhanQuyen" asp-action="Login">Login</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </section>
     <!-- Phần Content của trang index -->
     <section data-bs-version="5.1" class="content2 cid-tsEQSCqggh" id="content2-2">
         <div class="container">
@@ -49,10 +103,15 @@
                             <div class="card-body">
                                 <h5 class="card-title">@item.TenSP</h5>
                                 <p class="card-text">@item.GiaTien đ</p>
-                                <a asp-controller="ShopController1" asp-action="editShop" asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
+                                @if (User.IsInRole("Write"))
+                                {
+                                    <a asp-controller="ShopController1" asp-action="editShop" asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
+                                }
                                 <a asp-controller="ShopController1" asp-action="MoTa" asp-route-id="@item.Id" as class="btn btn-primary">Description</a>
-                                <button onclick="confirmDelete(@item.Id)" class="btn btn-danger">Delete</button>
-
+                                @if (User.IsInRole("Write"))
+                                {
+                                    <button onclick="confirmDelete(@item.Id)" class="btn btn-danger">Delete</button>
+                                }
                             </div>
                         </div>
                     </div>
