--- a/MVC_API_DoAn/Views/ShopController1/Search.cshtml
+++ b/MVC_API_DoAn/Views/ShopController1/Search.cshtml
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html">
+                    <a asp-controller="ShopController1" asp-action="TrangChu">
                         <img src="~/API_DoAn/assets/Anh/logo2.jpg" alt="Coffee Shop" style="height: 3rem;">
                     </a>
                 </span>
