--- a/MVC_API_DoAn/Views/ShopController1/TrangChu.cshtml
+++ b/MVC_API_DoAn/Views/ShopController1/TrangChu.cshtml
@@ -36,7 +36,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
-                        <a href="index.html">
+                        <a asp-controller="ShopController1" asp-action="TrangChu">
                             <img src="~/API_DoAn/assets/Anh/logo2.jpg" alt="Coffee Shop" style="height: 3rem;">
                         </a>
                     </span>
@@ -91,7 +91,10 @@
             </div>
 
             <div class="text-right mb-3">
+                             @if (User.IsInRole("Write"))
+                                {
                 <a class="btn btn-primary" asp-controller="ShopController1" asp-action="addShop">Create Product</a>
+                                }
             </div>
     
             <div class="row mt-4" id="product-list">
